Fixed URL color visibility issues on some themes

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -17,6 +17,7 @@
     --mynah-color-text-strong: var(--vscode-input-foreground);
     --mynah-color-text-weak: var(--vscode-disabledForeground);
     --mynah-color-text-link: var(--vscode-textLink-foreground);
+    --mynah-color-text-link-alternate: var(--mynah-color-button-reverse);
     --mynah-color-text-input: var(--vscode-input-foreground);
 
     --mynah-color-bg: var(--vscode-sideBar-background);
